<resources>
    <string name="app_name">Ski Buddy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_facebook_login">Ski Buddy</string>
    <string name="facebook_app_id">1656101344648408</string>
    <string name="tag_line_hint">Enter your tagline here</string>
    <string name="total_tag_words">0/130</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="totalDistance">Total Distance</string>
    <string name="averageSpeed">Average Speed</string>
    <string name="baseURL">http://54.67.31.105:8080/skibuddy-1.0.0-BUILD-SNAPSHOT/learninghorizon/v1</string>
    <!--<string name="baseURL">http://10.0.0.82:8080/skibuddy/learninghorizon/v1</string>-->
    <string name="started">Started:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="altitude">Altitude:</string>
    <string name="elapsed_time">Elapsed Time:</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="gps_enabled">GPS Enabled</string>
    <string name="gps_disabled">GPS Disabled</string>
    <string name="speed">Current Speed</string>
    <string name="descripion">In memory of bolt</string>
    <string name="title_activity_create_event">CreateEvent</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="maxSpeed">Max Speed</string>
    <string name="duration">Duration</string>
    <string name="date">Event Date</string>
    <string name="choose_date">Date</string>
    <string name="start_time">Start Time</string>
    <string name="choose_time">Time</string>
    <string name="end_time">End Time</string>
    <string name="required_field">Field is Required</string>
    <string name="session_name">Name your session</string>
    <string name="remove_location_share">Revoke Location Sharing</string>
    <string name="share_location">Share Location</string>
    <string name="login_page_statement">Track your ski sessions</string>
    <string name="street_name">Street Name</string>

    <item name="required_field" type="id">Field is Required</item>
</resources>
