<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:gravity="bottom" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:layout_gravity="center_horizontal"
        android:id="@+id/edit_tag_pic"
        />
       >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/edit_tag_name"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="26dp"
        android:layout_marginTop="10dp"/>>
    <com.learninghorizon.skibuddy.widget.ClearableEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edittext_tag_line"
        android:hint="@string/tag_line_hint"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/white"
        android:maxLines="1"
        android:singleLine="true"
        android:maxLength="130"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_tag_words"
        android:id="@+id/tag_length"
        android:layout_marginRight="10dp"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:textSize="16dp"
        />

</LinearLayout>