<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    card_view:cardCornerRadius="4dp"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/sessioncardheader"
        >

        <TextView
            android:id="@+id/session_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Session Name"
            android:gravity="center_vertical"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:id="@+id/session_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dec 1, 2015"
            android:gravity="center_vertical"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/totalDistance"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:id="@+id/session_distance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="12 Miles"
            android:textSize="14dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
           />

</LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/averageSpeed"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                />

            <TextView
                android:id="@+id/session_average_speed"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="1.2M/Hr"
                android:textSize="14dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/maxSpeed"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                />
            <TextView
                android:id="@+id/max_speed"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="1.2M/Hr"
                android:textSize="14dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/duration"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                />
            <TextView
                android:id="@+id/duration"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="1.2M/Hr"
                android:textSize="14dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"

                />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sessionid"
            android:visibility="invisible"
            />
        </LinearLayout>
    </LinearLayout>

    </android.support.v7.widget.CardView>